# PathTracing

./: .gitignore  CompareDefaultGenerators.pptx  README.md  Курсовая работа.docx
My project/: CMakeLists.txt  UsefulThings.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  triangle.h  vec3.h
My project/AdditionalLibraries/: clock.h
My project/Assets/CornellBox/: CornellBox-Original.mtl  data.txt
My project/Assets/CornellBoxMod/: CornellBox-Mod.mtl  CornellBox-Original.mtl
My project/Assets/Cubes/: cubes.mtl  data.txt
My project/Assets/SceneMirrors/: scene.blend1
My project/Assets/TestNormals/: data.txt  sphere.mtl
My project/Assets/Wolf/: data.txt  wolf.blend1  wolf.mtl  wolf_smooth.mtl
My project/ObjectCharacteristics/: color.h  hittable.h  hittable_list.h  material.h
My project/Results/: ImageCompare.py  MSECompare.py  MSECounter.py  ResultsForGraphs.txt  algorithmsCompare.py  graphBuilderForErrors.py
My project/Results/BlueNoise/: cornell_128_8_flip.txt  cornell_64_8_flip.txt  cornell_8_8_flip.txt  cornell_box_original_128_8_BlueNoise[84.836seconds].txt  cornell_box_original_8_8_BlueNoise[6.045seconds].txt  wolf_1_8_BlueNoise[26.545seconds].txt  wolf_2_8_flip.txt
My project/Results/Halton/: cornell_128_8_flip.txt  cornell_64_8_flip.txt  cornell_8_8_flip.txt  cornell_box_original_64_8_Halton[45.501seconds].txt  (+4 more)
My project/SceneObjects/: camera.h  sphere.h  vec3.h
My project/src/: SceneReader.h  UsefulThings.h  aabb.h  bvh.h  camera.h  interval.h  main.cpp  precalculated_data.h
(+195 files in other folders)
